--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -289,7 +289,7 @@ pytz-deprecation-shim==0.1.0.post0 # LEVEL_02 # Shims to make deprecation of pyt
 python-dateutil==2.8.2 # LEVEL_02 # Extensions to the standard Python datetime module
 convertdate==2.4.0 # LEVEL_02 # for prophet (requires pytz, pymeeus) # Converts between Gregorian dates and other calendar systems
 isodate==0.6.1 # LEVEL_02 # An ISO 8601 date/time/duration parser and formatter
-pyluach==1.4.0 # LEVEL_01 # Pyluach is a Python package for manipulating Hebrew dates,
+pyluach==1.4.1 # LEVEL_01 # Pyluach is a Python package for manipulating Hebrew dates,
 iso8601==1.0.2 # LEVEL_01 # Simple module to parse ISO 8601 dates
 hijri-converter==2.2.3 # LEVEL_01 # Accurate Hijri-Gregorian dates converter based on the Umm al-Qura calendar
 pytz==2022.1 # LEVEL_01 # World timezone definitions, modern and historical
@@ -578,14 +578,14 @@ PyJWT==2.3.0 # LEVEL_01 # JSON Web Token implementation in Python
 #
 # RPC
 #
-grpcio-status==1.44.0 # LEVEL_03 # Status proto mapping for gRPC
+grpcio-status==1.44.0 # LEVEL_03 # LOCKED # Status proto mapping for gRPC
 grpcio==1.44.0 # LEVEL_02 # HTTP/2-based RPC framework
 json-rpc==1.13.0 # LEVEL_01 # JSON-RPC transport implementation
 
 #
 # Sphinx
 #
-pydata-sphinx-theme==0.8.0 # LEVEL_04 # Bootstrap-based Sphinx theme from the PyData community
+pydata-sphinx-theme==0.8.1 # LEVEL_04 # Bootstrap-based Sphinx theme from the PyData community
 sphinx-autobuild==2021.3.14 # LEVEL_04 # Rebuild Sphinx documentation on changes, with live-reload in the browser
 sphinx-rtd-theme==1.0.0 # LEVEL_04 # Read the Docs theme for Sphinx
 sphinx-panels==0.6.0 # LEVEL_04 # A sphinx extension for creating panels in a grid layout
@@ -618,10 +618,10 @@ cssselect2==0.5.0 # LEVEL_03 # CSS selectors for Python ElementTree
 #
 # Checkers
 #
-pytest-asyncio==0.18.2 # LEVEL_04 # Pytest support for asyncio
+pytest-asyncio==0.18.3 # LEVEL_04 # Pytest support for asyncio
 pytest==7.1.1 # LEVEL_03 # pytest: simple powerful testing with Python
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
-mypy==0.941 # LEVEL_02 # Optional static typing for Python
+mypy==0.942 # LEVEL_02 # Optional static typing for Python
 mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
 memory-profiler==0.60.0 # LEVEL_02 # A module for monitoring memory usage of a python program
@@ -648,7 +648,7 @@ pipx==1.0.0 # LEVEL_03 # Install and Run Python Applications in Isolated Environ
 docker==5.0.3 # LEVEL_03 # A Python library for the Docker Engine API
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
 pyinstaller==4.10 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
-pyinstaller-hooks-contrib==2022.2 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
+pyinstaller-hooks-contrib==2022.3 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
 
 # Packages
 importlib-resources==5.4.0 # LEVEL_02 # Read resources from Python packages
@@ -724,9 +724,9 @@ astunparse==1.6.3 # LEVEL_02 # An AST unparser for Python
 asynq==1.4.0 # LEVEL_03 # Quora's asynq library
 attrs==21.4.0 # LEVEL_01 # Classes Without Boilerplate
 backcall==0.2.0 # LEVEL_01 # Specifications for callback functions passed in to an API
-blis==0.7.6 # LEVEL_02 # The Blis BLAS-like linear algebra library, as a self-contained C-extension
+blis==0.7.7 # LEVEL_02 # The Blis BLAS-like linear algebra library, as a self-contained C-extension
 Brotli==1.0.9 # LEVEL_01 # Python bindings for the Brotli compression library
-catalogue==2.0.6 # LEVEL_01 # Super lightweight function registries for your library
+catalogue==2.0.7 # LEVEL_01 # Super lightweight function registries for your library
 cchardet==2.1.7 # LEVEL_01 # cChardet is high speed universal character encoding detector
 cffi==1.15.0 # LEVEL_02 # Foreign Function Interface for Python calling C code
 chardet==4.0.0 # LEVEL_01 # Universal encoding detector for Python 2 and 3
@@ -737,7 +737,7 @@ coverage==6.3.2 # LEVEL_01 # Code coverage measurement for Python
 croniter==1.3.4 # LEVEL_03 # croniter provides iteration for datetime object with cron like format
 cycler==0.11.0 # LEVEL_01 # Composable style cycles
 cymem==2.0.6 # LEVEL_01 # Manage calls to calloc/free through Cython
-debugpy==1.5.1 # LEVEL_01 # An implementation of the Debug Adapter Protocol for Python
+debugpy==1.6.0 # LEVEL_01 # An implementation of the Debug Adapter Protocol for Python
 decorator==5.1.1 # LEVEL_01 # Decorators for Humans
 defusedxml==0.7.1 # LEVEL_01 # XML bomb protection for Python stdlib modules
 deprecation==2.1.0 # LEVEL_03 # A library to handle automated deprecations
@@ -761,9 +761,9 @@ httplib2==0.20.4 # LEVEL_02 # A comprehensive HTTP client library
 idna==3.3 # LEVEL_01 # Internationalized Domain Names in Applications (IDNA)
 ipython==8.1.1 # LEVEL_04 # IPython: Productive Interactive Computing
 ipython-genutils==0.2.0 # LEVEL_01 # Vestigial utilities from IPython
-itsdangerous==2.1.1 # LEVEL_01 # Safely pass data to untrusted environments and back
+itsdangerous==2.1.2 # LEVEL_01 # Safely pass data to untrusted environments and back
 jedi==0.18.1 # LEVEL_02 # An autocompletion tool for Python that can be used for text editors
-Jinja2==3.0.3 # LEVEL_02 # template engine # A very fast and expressive template engine
+Jinja2==3.1.0 # LEVEL_02 # template engine # A very fast and expressive template engine
 korean-lunar-calendar==0.2.1 # LEVEL_01 # Korean Lunar Calendar
 llvmlite==0.38.0 # LEVEL_01 # lightweight wrapper around basic LLVM functionality
 lxml==4.8.0 # LEVEL_01 # Powerful and Pythonic XML processing library combining libxml2/libxslt with the ElementTree API
@@ -835,7 +835,7 @@ threadpoolctl==3.1.0 # LEVEL_01 # threadpoolctl
 toml==0.10.2 # LEVEL_01 # Python Library for Tom's Obvious, Minimal Language
 tomlkit==0.10.0 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
-tqdm==4.63.0 # LEVEL_01 # Fast, Extensible Progress Meter
+tqdm==4.63.1 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
 typed-ast==1.5.2 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
@@ -1047,7 +1047,7 @@ emoji==1.7.0 # LEVEL_01 # Emoji for Python
 #
 shellingham==1.4.0 # LEVEL_01 # Tool to Detect Surrounding Shell
 #
-fonttools==4.31.1 # LEVEL_01 # Tools to manipulate font files
+fonttools==4.31.2 # LEVEL_01 # Tools to manipulate font files
 setuptools-scm==6.4.2 # LEVEL_03 # the blessed package to manage your versions by scm tags
 tomli==2.0.1 # LEVEL_01 # A lil' TOML parser
 #
@@ -1061,7 +1061,7 @@ vine==5.0.0 # LEVEL_01 # Promises, promises, promises
 #
 
 flower==1.0.0 # LEVEL_05 # Celery Flower
-gradio==2.8.12 # LEVEL_05 # Python library for easily interacting with trained machine learning models
+gradio==2.8.14 # LEVEL_05 # Python library for easily interacting with trained machine learning models
 paramiko==2.10.3 # LEVEL_04 # SSH2 protocol library
 celery==5.2.3 # LEVEL_04 # Distributed Task Queue
 analytics-python==1.4.0 # LEVEL_03 # The hassle-free way to integrate analytics into any python application
