--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -126,6 +126,8 @@ torchaudio==0.10.2 # LEVEL_03 # An audio package for PyTorch
 torchvision==0.11.3 # LEVEL_03 # image and video datasets and models for torch deep learning
 torch==1.10.2 # LEVEL_02 # Tensors and Dynamic neural networks in Python with strong GPU acceleration
 #
+click==8.0.4 # LEVEL_01 # LOCKED # Composable command line interface toolkit
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -841,7 +843,7 @@ testpath==0.6.0 # LEVEL_01 # Test utilities for code working with files and comm
 text-unidecode==1.3 # LEVEL_01 # The most basic Text::Unidecode port
 threadpoolctl==3.1.0 # LEVEL_01 # threadpoolctl
 toml==0.10.2 # LEVEL_01 # Python Library for Tom's Obvious, Minimal Language
-tomlkit==0.10.0 # LEVEL_01 # Style preserving TOML library
+tomlkit==0.10.1 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
 tqdm==4.63.1 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
@@ -856,8 +858,8 @@ wasabi==0.9.0 # LEVEL_01 # A lightweight console printing and formatting toolkit
 wcwidth==0.2.5 # LEVEL_01 # Measures the displayed width of unicode strings in a terminal
 webencodings==0.5.1 # LEVEL_01 # Character encoding aliases for legacy web content
 websockets==10.2 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
-websocket-client==1.3.1 # LEVEL_01 # WebSocket client for Python with low level API options
-Werkzeug==2.0.3 # LEVEL_01 # The comprehensive WSGI web application library
+websocket-client==1.3.2 # LEVEL_01 # WebSocket client for Python with low level API options
+Werkzeug==2.1.0 # LEVEL_01 # The comprehensive WSGI web application library
 wireless==0.3.3 # LEVEL_01 # A dead simple, cross-platform Python library to connect to wireless networks
 xxhash==3.0.0 # LEVEL_01 # Python binding for xxHash
 yarl==1.7.2 # LEVEL_02 # Yet another URL library
@@ -886,8 +888,6 @@ click-repl==0.2.0 # LEVEL_03 # REPL plugin for Click
 click-didyoumean==0.3.0 # LEVEL_02 # Enables git-like *did-you-mean* feature in click
 click-plugins==1.1.1 # LEVEL_02 # An extension module for click to enable registering CLI commands via setuptools entry-points
 cligj==0.7.2 # LEVEL_02 # Click params for commmand line interfaces to GeoJSON
-click==8.0.4 # LEVEL_01 # Composable command line interface toolkit
-
 #
 #
 # Resolve below
@@ -1011,7 +1011,7 @@ zope_interface==5.4.0 # LEVEL_02 # Interfaces for Python
 #
 nodejs==0.1.1 # LEVEL_02 # Python bindings and utils for Node.js and io.js
 olefile==0.46 # LEVEL_01 # Python package to parse, read and write Microsoft OLE2 files (Structured Storage or Compound Document, Microsoft Office)
-pyviz-comms==2.1.0 # LEVEL_02 # Bidirectional communication for the HoloViz ecosystem
+pyviz-comms==2.2.0 # LEVEL_02 # Bidirectional communication for the HoloViz ecosystem
 proj==0.2.0 # LEVEL_04 # A command-line manager for archiving and retrieving projects
 pyee==9.0.4 # LEVEL_02 # A port of node.js's EventEmitter to python
 rouge-score==0.0.4 # LEVEL_03 # Pure python implementation of ROUGE-1.5.5
@@ -1049,7 +1049,7 @@ subprocess32==3.5.4 # LEVEL_01 # A backport of the subprocess module from Python
 livereload==2.6.3 # LEVEL_02 # Python LiveReload is an awesome tool for web developers
 #
 langcodes==3.3.0 # LEVEL_01 # Tools for labeling human languages with IETF language tags
-kiwisolver==1.4.0 # LEVEL_01 # A fast implementation of the Cassowary constraint solver
+kiwisolver==1.4.2 # LEVEL_01 # A fast implementation of the Cassowary constraint solver
 #
 emoji==1.7.0 # LEVEL_01 # Emoji for Python
 #
