--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -128,6 +128,8 @@ torch==1.10.2 # LEVEL_02 # Tensors and Dynamic neural networks in Python with st
 #
 click==8.0.4 # LEVEL_01 # LOCKED # Composable command line interface toolkit
 #
+ipykernel==6.10.0 # LEVEL_05 # LOCKED # IPython Kernel for Jupyter
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -272,7 +274,7 @@ phik==0.12.2 # LEVEL_04 # Phi_K correlation analyzer library
 umap-learn==0.5.2 # LEVEL_05 # Uniform Manifold Approximation and Projection
 yellowbrick==1.4 # LEVEL_04 # A suite of visual analysis and diagnostic tools for machine learning
 pynndescent==0.5.6 # LEVEL_04 # Nearest Neighbor Descent
-kmodes==0.11.1 # LEVEL_04 # Python implementations of the k-modes and k-prototypes clustering algorithms for clustering categorical data
+kmodes==0.12.0 # LEVEL_04 # Python implementations of the k-modes and k-prototypes clustering algorithms for clustering categorical data
 lightgbm==3.3.2 # LEVEL_04 # LightGBM Python Package
 #
 rapidminer==9.10.0.0 # LEVEL_05 # Tools for running RapidMiner processes and managing RapidMiner repositories
@@ -496,6 +498,7 @@ hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
 # Google ..
 #
 google-cloud-bigquery==3.0.1 # LEVEL_06 # Google BigQuery API client library
+google-cloud-bigquery-storage==2.13.0 # LEVEL_05 # BigQuery Storage API API client library
 google-cloud-core==2.2.3 # LEVEL_05 # Google Cloud API client core library
 google-resumable-media==2.3.2 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
 google-crc32c==1.3.0 # LEVEL_01 # A python wrapper of the C library 'Google CRC32C'
@@ -546,7 +549,6 @@ notebook==6.4.10 # LEVEL_06 # A web-based notebook environment for interactive c
 nbsphinx==0.8.8 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
 nbconvert==6.4.5 # LEVEL_05 # Converting Jupyter Notebooks
 qtconsole==5.3.0 # LEVEL_06 # Jupyter Qt console
-ipykernel==6.10.0 # LEVEL_05 # IPython Kernel for Jupyter
 nbclient==0.5.13 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
 nbformat==5.2.0 # LEVEL_03 # The Jupyter Notebook format
 matplotlib-inline==0.1.3 # LEVEL_02 # Inline Matplotlib backend for Jupyter
@@ -754,14 +756,14 @@ deprecation==2.1.0 # LEVEL_03 # A library to handle automated deprecations
 dill==0.3.4 # LEVEL_01 # serialize all of python
 dm-tree==0.1.6 # LEVEL_02 # Tree is a library for working with nested data structures
 dnspython==2.2.1 # LEVEL_01 # DNS toolkit
-elasticsearch==8.1.1 # LEVEL_03 # Python client for Elasticsearch
+elasticsearch==8.1.2 # LEVEL_03 # Python client for Elasticsearch
 email-validator==1.1.3 # LEVEL_02 # A robust email syntax and deliverability validation library for Python 2.x/3.x
 ephem==4.1.3 # LEVEL_01 # Compute positions of the planets and stars
 et-xmlfile==1.1.0 # LEVEL_01 # An implementation of lxml.xmlfile for the standard library
 eventkit==0.8.9 # LEVEL_02 # Event-driven data pipelines
 fake-useragent==0.1.11 # LEVEL_01 # Up to date simple useragent faker with real world database
 freetype-py==2.2.0 # LEVEL_01 # Freetype python bindings
-fsspec==2022.2.0 # LEVEL_01 # File-system specification
+fsspec==2022.3.0 # LEVEL_01 # File-system specification
 future==0.18.2 # LEVEL_01 # Clean single-source support for Python 3 and 2
 geographiclib==1.52 # LEVEL_01 # The geodesic routines from GeographicLib
 geopy==2.2.0 # LEVEL_02 # Python Geocoding Toolbox
@@ -1166,3 +1168,5 @@ pandocfilters==1.5.0 # LEVEL_01 # Utilities for writing pandoc filters in python
 plumbum==1.7.2 # LEVEL_01 # Plumbum: shell combinators library
 #
 tinydb==4.7.0 # LEVEL_01 # TinyDB is a tiny, document oriented database optimized for your happiness :)
+#
+responses==0.18.0 # LEVEL_03 # A utility library for mocking out the `requests` Python library
