--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -106,7 +106,7 @@ cmdstanpy==0.9.5 # LEVEL_04 # ONLY_OSX # LOCKED # fbprophet==0.7.1 requires cmds
 #
 pybullet==3.2.0 # LEVEL_01 # LOCKED # ONLY_OSX # can't update ? # Official Python Interface for the Bullet Physics SDK specialized for Robotics Simulation and Reinforcement Learning
 #
-PyYAML==5.4 # LEVEL_01 # LOCKED # tf-models-official 2.8.0 depends on pyyaml<6.0 and >=5.1 # YAML parser and emitter for Python
+PyYAML==5.4.1 # LEVEL_01 # LOCKED # tf-models-official 2.8.0 depends on pyyaml<6.0 and >=5.1 # YAML parser and emitter for Python
 #
 ray==1.10.0 # LEVEL_04 # LOCKED # Ray provides a simple, universal API for building distributed applications
 #
@@ -129,6 +129,10 @@ torch==1.10.2 # LEVEL_02 # Tensors and Dynamic neural networks in Python with st
 click==8.0.4 # LEVEL_01 # LOCKED # Composable command line interface toolkit
 #
 ipykernel==6.10.0 # LEVEL_05 # LOCKED # IPython Kernel for Jupyter
+#
+Jinja2==3.0.3 # LEVEL_02 # LOCKED # recommenders 1.1.0 requires jinja2<3.1,>=2 # template engine # A very fast and expressive template engine
+#
+category-encoders==1.3.0 # LEVEL_05 # LOCKED # recommenders 1.1.0 requires category-encoders<2,>=1.3.0 # A collection sklearn transformers to encode categorical variables as numeric
 #
 #
 # Former LOCKED .. now freed ;-)
@@ -278,6 +282,8 @@ kmodes==0.12.0 # LEVEL_04 # Python implementations of the k-modes and k-prototyp
 lightgbm==3.3.2 # LEVEL_04 # LightGBM Python Package
 #
 rapidminer==9.10.0.0 # LEVEL_05 # Tools for running RapidMiner processes and managing RapidMiner repositories
+#
+recommenders==1.1.0 # LEVEL_06 # Microsoft Recommenders - Python utilities for building recommender systems
 
 #
 # Time Series
@@ -775,7 +781,6 @@ ipython==8.2.0 # LEVEL_04 # IPython: Productive Interactive Computing
 ipython-genutils==0.2.0 # LEVEL_01 # Vestigial utilities from IPython
 itsdangerous==2.1.2 # LEVEL_01 # Safely pass data to untrusted environments and back
 jedi==0.18.1 # LEVEL_02 # An autocompletion tool for Python that can be used for text editors
-Jinja2==3.1.1 # LEVEL_02 # template engine # A very fast and expressive template engine
 korean-lunar-calendar==0.2.1 # LEVEL_01 # Korean Lunar Calendar
 llvmlite==0.38.0 # LEVEL_01 # lightweight wrapper around basic LLVM functionality
 lxml==4.8.0 # LEVEL_01 # Powerful and Pythonic XML processing library combining libxml2/libxslt with the ElementTree API
@@ -1160,7 +1165,6 @@ simplecosine==1.2 # LEVEL_02 # Simple cosine distance
 #
 jdcal==1.4.1 # LEVEL_01 # Julian dates from proleptic Gregorian and Julian calendars
 #pandas-dedupe==1.5.0 # LEVEL_01
-datetime-distance==0.1.3 # LEVEL_03 # Compare string distances between dates, timestamps, or datetime objects
 dedupe-hcluster==0.3.9 # LEVEL_02 # Hierarchical Clustering Algorithms (Information Theory)
 #dedupe-variable-datetime==0.1.5 # LEVEL_01
 #
@@ -1172,3 +1176,14 @@ plumbum==1.7.2 # LEVEL_01 # Plumbum: shell combinators library
 tinydb==4.7.0 # LEVEL_01 # TinyDB is a tiny, document oriented database optimized for your happiness :)
 #
 responses==0.18.0 # LEVEL_03 # A utility library for mocking out the `requests` Python library
+#
+# recommenders from Microsoft
+#
+cornac==1.14.2 # LEVEL_05 # A Comparative Framework for Multimodal Recommender Systems
+lightfm==1.16 # LEVEL_04 # LightFM recommendation model
+pandera==0.10.1 # LEVEL_04 # A light-weight and flexible data validation and testing tool for dataframes
+powerlaw==1.5 # LEVEL_04 # Toolbox for testing if a probability distribution fits a power law
+scikit-surprise==1.1.1 # LEVEL_03 # An easy-to-use library for recommender systems
+Bottleneck==1.3.4 # LEVEL_02 # Fast NumPy array functions written in C
+hypothesis==6.41.0 # LEVEL_02 # A library for property-based testing
+mpmath==1.2.1 # LEVEL_01 # Python library for arbitrary-precision floating-point arithmetic
