--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -134,6 +134,8 @@ Jinja2==3.0.3 # LEVEL_02 # LOCKED # recommenders 1.1.0 requires jinja2<3.1,>=2 #
 #
 category-encoders==1.3.0 # LEVEL_05 # LOCKED # recommenders 1.1.0 requires category-encoders<2,>=1.3.0 # A collection sklearn transformers to encode categorical variables as numeric
 #
+responses==0.18.0 # LEVEL_03 # LOCKED # datasets 2.0.0 requires responses<0.19 # A utility library for mocking out the `requests` Python library
+#
 #
 # Former LOCKED .. now freed ;-)
 #
@@ -326,7 +328,7 @@ nltk==3.7 # LEVEL_02 # Natural Language Toolkit
 Babel==2.9.1 # LEVEL_02 # Internationalization utilities
 #
 bert-for-tf2==0.14.9 # LEVEL_03 # A TensorFlow 2.0 Keras implementation of BERT
-bertviz==1.3.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger # Attention visualization tool for NLP Transformer models
+bertviz==1.4.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger # Attention visualization tool for NLP Transformer models
 sentencepiece==0.1.96 # LEVEL_01 # for BERT # SentencePiece python wrapper
 #
 spacytextblob==4.0.0 # LEVEL_05 # A TextBlob sentiment analysis pipeline component for spaCy
@@ -356,8 +358,8 @@ agate==1.6.3 # LEVEL_03 # A data analysis library that is optimized for humans i
 #
 dask-ml==2022.1.22 # LEVEL_05 # A library for distributed and parallel machine learning
 dask-glm==0.2.0 # LEVEL_04 # Generalized Linear Models with Dask
-distributed==2022.3.0 # LEVEL_04 # Distributed scheduler for Dask
-dask[complete]==2022.3.0 # LEVEL_03 # Parallel PyData with Task Scheduling
+distributed==2022.4.0 # LEVEL_04 # Distributed scheduler for Dask
+dask[complete]==2022.4.0 # LEVEL_03 # Parallel PyData with Task Scheduling
 #dask-xgboost==0.2.0 # LEVEL_02 # outdated !
 # dask-cuda==21.10.0 # LEVEL_05 # outdated requirements
 # pynvml==11.0.0 # LEVEL_01 # POTENTIALLY_UNUSED # Python Bindings for the NVIDIA Management Library
@@ -365,7 +367,7 @@ dask[complete]==2022.3.0 # LEVEL_03 # Parallel PyData with Task Scheduling
 scikit-plot==0.3.7 # LEVEL_04 # An intuitive library to add plotting functionality to scikit-learn objects
 scikit-image==0.19.2 # LEVEL_03 # Image processing in Python
 scikit-learn==1.0.2 # LEVEL_03 # A set of python modules for machine learning and data mining
-pyod==0.9.8 # LEVEL_05 # outlyer detection # A Python Toolbox for Scalable Outlier Detection (Anomaly Detection)
+pyod==0.9.9 # LEVEL_05 # A Comprehensive and Scalable Python Library for Outlier Detection (Anomaly Detection)
 jax==0.3.4 # LEVEL_03 # Differentiate, compile, and transform Numpy code
 #
 zeep==4.1.0 # LEVEL_04 # A modern/fast Python SOAP client based on lxml / requests
@@ -439,14 +441,14 @@ selenium==4.1.3 # LEVEL_05 #
 cvxpy==1.2.0 # LEVEL_05 # A domain-specific language for modeling convex optimization problems in Python
 ecos==2.0.10 # LEVEL_03 # This is the Python package for ECOS: Embedded Cone Solver. See Github page for more information
 osqp==0.6.2.post5 # LEVEL_04 # OSQP: The Operator Splitting QP Solver
-qdldl==0.1.5.post0 # LEVEL_03 # QDLDL, a free LDL factorization routine
+qdldl==0.1.5.post2 # LEVEL_03 # QDLDL, a free LDL factorization routine
 scs==3.2.0 # LEVEL_03 # scs: splitting conic solver
 
 #
 # GUI & Visualization
 #
 QtPy==2.0.1 # LEVEL_03 # Provides an abstraction layer on top of the various Qt bindings (PyQt5/6 and PySide2/6)
-PySimpleGUI==4.57.0 # LEVEL_01 # Python GUIs for Humans. Launched in 2018. It's 2022 & PySimpleGUI is an ACTIVE & supported project. Super-simple to create custom GUI's. 325+ Demo programs & Cookbook for rapid start. Extensive documentation. Main docs at www.PySimpleGUI.org. Fun & your success are the focus. Examples using Machine Learning (GUI, OpenCV Integration), Rainmeter Style Desktop Widgets, Matplotlib + Pyplot, PIL support, add GUI to command line scripts, PDF & Image Viewers. Great for beginners & advanced GUI programmers
+PySimpleGUI==4.58.0 # LEVEL_01 # Python GUIs for Humans. Launched in 2018. It's 2022 & PySimpleGUI is an ACTIVE & supported project. Super-simple to create custom GUI's. 325+ Demo programs & Cookbook for rapid start. Extensive documentation. Main docs at www.PySimpleGUI.org. Fun & your success are the focus. Examples using Machine Learning (GUI, OpenCV Integration), Rainmeter Style Desktop Widgets, Matplotlib + Pyplot, PIL support, add GUI to command line scripts, PDF & Image Viewers. Great for beginners & advanced GUI programmers
 PyQt5==5.15.6 # LEVEL_02 # Python bindings for the Qt cross platform application toolkit
 PyQt5-Qt5==5.15.2 # LEVEL_01 # The subset of a Qt installation needed by PyQt5
 PyQt5-sip==12.9.1 # LEVEL_01 # The sip module support for PyQt5
@@ -476,7 +478,7 @@ dash-html-components==2.0.0 # LEVEL_01 # Vanilla HTML components for Dash
 dash-table==5.0.0 # LEVEL_01 # Dash table
 dash-renderer==1.9.1 # LEVEL_01 # Front-end component renderer for Dash
 #
-plotly==5.6.0 # LEVEL_03 # An open-source, interactive data visualization library for Python
+plotly==5.7.0 # LEVEL_03 # An open-source, interactive data visualization library for Python
 chart-studio==1.1.0 # LEVEL_04 # Utilities for interfacing with plotly's Chart Studio
 #
 vispy==0.9.6 # LEVEL_02 # Interactive visualization in Python
@@ -493,7 +495,7 @@ spectra==0.0.11 # LEVEL_03 # old # Color scales and color conversion made easy f
 colorcet==3.0.0 # LEVEL_03 # Collection of perceptually uniform colormaps
 colormath==3.0.0 # LEVEL_02 # not maintained # Color math and conversion library
 blessings==1.7 # LEVEL_02 # old # A thin, practical wrapper around terminal coloring, styling, and positioning
-rich==12.0.1 # LEVEL_02 # best !! # Render rich text, tables, progress bars, syntax highlighting, markdown and more to the terminal
+rich==12.2.0 # LEVEL_02 # best !! # Render rich text, tables, progress bars, syntax highlighting, markdown and more to the terminal
 colorama==0.4.4 # LEVEL_01 # Cross-platform colored terminal text
 termcolor==1.1.0 # LEVEL_01 # OLD !! # ANSII Color formatting for output in terminal
 colorful==0.5.4 # LEVEL_01 # old # Terminal string styling done right, in Python
@@ -504,12 +506,12 @@ hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
 # Google ..
 #
 google-cloud-bigquery==3.0.1 # LEVEL_06 # Google BigQuery API client library
-google-cloud-bigquery-storage==2.13.0 # LEVEL_05 # BigQuery Storage API API client library
+google-cloud-bigquery-storage==2.13.1 # LEVEL_05 # BigQuery Storage API API client library
 google-cloud-core==2.2.3 # LEVEL_05 # Google Cloud API client core library
 google-resumable-media==2.3.2 # LEVEL_02 # Utilities for Google Media Downloads and Resumable Uploads
 google-crc32c==1.3.0 # LEVEL_01 # A python wrapper of the C library 'Google CRC32C'
 #
-google-api-python-client==2.42.0 # LEVEL_05 # Google API Client Library for Python
+google-api-python-client==2.43.0 # LEVEL_05 # Google API Client Library for Python
 google-api-core==2.7.1 # LEVEL_04 # Google API client core library
 google-auth-httplib2==0.1.0 # LEVEL_04 # Google Authentication Library: httplib2 transport
 google-pasta==0.2.0 # LEVEL_02 # pasta is an AST-based Python refactoring library
@@ -520,15 +522,15 @@ uritemplate==4.1.1 # LEVEL_01 # required by google-api-python-client # Implement
 # Azure
 azure-eventhub==5.7.0 # LEVEL_04 # Microsoft Azure Event Hubs Client Library for Python
 azure-storage-blob==12.11.0 # LEVEL_05 # Microsoft Azure Blob Storage Client Library for Python
-azure-core==1.23.0 # LEVEL_03 # Microsoft Azure Core Library for Python
+azure-core==1.23.1 # LEVEL_03 # Microsoft Azure Core Library for Python
 azure-common==1.1.28 # LEVEL_01 # Microsoft Azure Client Library for Python (Common)
 smart-open==5.2.1 # LEVEL_01 # Utils for streaming large files (S3, HDFS, GCS, Azure Blob Storage, gzip, bz2...)
 uamqp==1.5.3 # LEVEL_02 # AMQP 1.0 Client Library for Python
 
 # Amazon
-boto3==1.21.30  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+boto3==1.21.33  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
 s3transfer==0.5.2 # LEVEL_04 # An Amazon S3 Transfer Manager
-botocore==1.24.30 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+botocore==1.24.33 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 
 #
@@ -539,7 +541,7 @@ jupyter==1.0.0 # LEVEL_09 # Jupyter metapackage. Install all the Jupyter compone
 jupyterlab==3.3.2 # LEVEL_09 # JupyterLab computational environment
 jupyter-server-proxy==3.2.1 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
 jupyterlab-server==2.12.0 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
-jupyter-dash==0.4.1 # LEVEL_06 # Dash support for the Jupyter notebook interface
+jupyter-dash==0.4.2 # LEVEL_06 # Dash support for the Jupyter notebook interface
 jupyter-server==1.16.0 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
 jupyter-console==6.4.3 # LEVEL_06 # Jupyter terminal console
 jupyter-client==7.2.1 # LEVEL_03 # Jupyter protocol implementation and client libraries
@@ -556,7 +558,7 @@ nbsphinx==0.8.8 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
 nbconvert==6.4.5 # LEVEL_05 # Converting Jupyter Notebooks
 qtconsole==5.3.0 # LEVEL_06 # Jupyter Qt console
 nbclient==0.5.13 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
-nbformat==5.2.0 # LEVEL_03 # The Jupyter Notebook format
+nbformat==5.3.0 # LEVEL_03 # The Jupyter Notebook format
 matplotlib-inline==0.1.3 # LEVEL_02 # Inline Matplotlib backend for Jupyter
 #
 
@@ -736,7 +738,7 @@ aioredis==2.0.1 # 1.3.1 # LEVEL_02 # asyncio (PEP 3156) Redis support
 altgraph==0.17.2 # LEVEL_01 # Python graph (network) package
 anyio==3.5.0 # LEVEL_02 # High level compatibility layer for multiple asynchronous event loop implementations
 appdirs==1.4.4 # LEVEL_01 # A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir"
-appnope==0.1.2 # LEVEL_01 # Disable App Nap on macOS >= 10.9
+appnope==0.1.3 # LEVEL_01 # Disable App Nap on macOS >= 10.9
 ast-decompiler==0.4.0 # LEVEL_01 # Python module to decompile AST to Python code
 astunparse==1.6.3 # LEVEL_02 # An AST unparser for Python
 asynq==1.4.0 # LEVEL_03 # Quora's asynq library
@@ -852,7 +854,7 @@ threadpoolctl==3.1.0 # LEVEL_01 # threadpoolctl
 toml==0.10.2 # LEVEL_01 # Python Library for Tom's Obvious, Minimal Language
 tomlkit==0.10.1 # LEVEL_01 # Style preserving TOML library
 tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous networking library, originally developed at FriendFeed
-tqdm==4.63.1 # LEVEL_01 # Fast, Extensible Progress Meter
+tqdm==4.64.0 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
 typed-ast==1.5.2 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
@@ -866,12 +868,12 @@ wcwidth==0.2.5 # LEVEL_01 # Measures the displayed width of unicode strings in a
 webencodings==0.5.1 # LEVEL_01 # Character encoding aliases for legacy web content
 websockets==10.2 # LEVEL_01 # An implementation of the WebSocket Protocol (RFC 6455 & 7692)
 websocket-client==1.3.2 # LEVEL_01 # WebSocket client for Python with low level API options
-Werkzeug==2.1.0 # LEVEL_01 # The comprehensive WSGI web application library
+Werkzeug==2.1.1 # LEVEL_01 # The comprehensive WSGI web application library
 wireless==0.3.3 # LEVEL_01 # A dead simple, cross-platform Python library to connect to wireless networks
 xxhash==3.0.0 # LEVEL_01 # Python binding for xxHash
 yarl==1.7.2 # LEVEL_02 # Yet another URL library
 zict==2.1.0 # LEVEL_02 # Mutable mapping tools
-zipp==3.7.0 # LEVEL_01 # Backport of pathlib-compatible object wrapper for zip files
+zipp==3.8.0 # LEVEL_01 # Backport of pathlib-compatible object wrapper for zip files
 #
 PySocks==1.7.1 # LEVEL_01 # A Python SOCKS client module. See https://github.com/Anorov/PySocks for more information
 python-socks==2.0.3 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) functionality for Python
@@ -880,7 +882,7 @@ python-socks==2.0.3 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) fun
 # SQL
 #
 alembic==1.7.7 # LEVEL_03 # A database migration tool for SQLAlchemy
-SQLAlchemy== 1.4.33 # LEVEL_02 # Database Abstraction Library
+SQLAlchemy== 1.4.34 # LEVEL_02 # Database Abstraction Library
 Mako==1.2.0 # LEVEL_02 # A super-fast templating language that borrows the best ideas from the existing templating languages
 PyMySQL==1.0.2 # LEVEL_01 # Pure Python MySQL Driver
 pyodbc==4.0.32 # LEVEL_01 # ONLY_OSX # DB API Module for ODBC
@@ -900,7 +902,7 @@ cligj==0.7.2 # LEVEL_02 # Click params for commmand line interfaces to GeoJSON
 # Resolve below
 #
 #streamlit # has some dependencies !!
-tiledb==0.13.1 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
+tiledb==0.13.3 # LEVEL_03 # Pythonic interface to the TileDB array storage manager
 xarray==2022.3.0 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.1.0 # LEVEL_01 # ONLY_OSX # ZSTD Bindings for Python
 #
@@ -1025,14 +1027,14 @@ rouge-score==0.0.4 # LEVEL_03 # Pure python implementation of ROUGE-1.5.5
 pynvml==11.4.1 # LEVEL_01 # Python Bindings for the NVIDIA Management Library
 #
 numcodecs==0.9.1 # LEVEL_02 # A Python package providing buffer compression and transformation codecs for use in data storage and communication applications
-zarr==2.11.1 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
+zarr==2.11.2 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
 asciitree==0.3.3 # LEVEL_01 # Draws ASCII trees
 #
 # dbt !! not compatible with many versions !!
 dbt-extractor==0.4.1 # LEVEL_01 # A tool to analyze and extract information from Jinja used in dbt projects
 leather==0.3.4 # LEVEL_02 # Python charting for 80% of humans
 Logbook==1.5.3 # LEVEL_01 # A logging replacement for Python
-mashumaro==3.0 # LEVEL_02 # Fast serialization framework on top of dataclasses
+mashumaro==3.0.1 # LEVEL_02 # Fast serialization framework on top of dataclasses
 minimal-snowplow-tracker==0.0.2 # LEVEL_03 # A minimal snowplow event tracker for Python. Add analytics to your Python and Django apps, webapps and games
 msrest==0.6.21 # LEVEL_04 # AutoRest swagger generator Python client runtime
 ruamel_yaml==0.17.21 # LEVEL_02 # ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order
@@ -1066,7 +1068,7 @@ fonttools==4.31.2 # LEVEL_01 # Tools to manipulate font files
 setuptools-scm==6.4.2 # LEVEL_03 # the blessed package to manage your versions by scm tags
 tomli==2.0.1 # LEVEL_01 # A lil' TOML parser
 #
-databricks-cli==0.16.4 # LEVEL_03 # A command line interface for Databricks
+databricks-cli==0.16.6 # LEVEL_03 # A command line interface for Databricks
 python-editor==1.0.4 # LEVEL_01 # Programmatically open an editor, capture the result
 querystring-parser==1.2.4 # LEVEL_02 # QueryString parser for Python/Django that correctly handles nested dictionaries
 #
@@ -1078,7 +1080,7 @@ vine==5.0.0 # LEVEL_01 # Promises, promises, promises
 flower==1.0.0 # LEVEL_05 # Celery Flower
 gradio==2.8.14 # LEVEL_05 # Python library for easily interacting with trained machine learning models
 paramiko==2.10.3 # LEVEL_04 # SSH2 protocol library
-celery==5.2.3 # LEVEL_04 # Distributed Task Queue
+celery==5.2.6 # LEVEL_04 # Distributed Task Queue
 analytics-python==1.4.0 # LEVEL_03 # The hassle-free way to integrate analytics into any python application
 kombu==5.2.4 # LEVEL_03  # Messaging library for Python
 curtsies==0.3.10 # LEVEL_03 # Curses-like terminal wrapper, with colored strings!
@@ -1108,7 +1110,7 @@ uuid==1.30 # LEVEL_01 # UUID object and generation functions
 onnxruntime==1.10.0 # LEVEL_02 # ONNX Runtime is a runtime accelerator for Machine Learning models
 onnxoptimizer==0.2.6 # LEVEL_03 # Open Neural Network Exchange
 onnx-simplifier==0.3.7 # LEVEL_04 # Simplify your ONNX model
-netron==5.6.6 # LEVEL_01 # Viewer for neural network, deep learning, and machine learning models
+netron==5.6.7 # LEVEL_01 # Viewer for neural network, deep learning, and machine learning models
 #
 #python-multipart==0.0.5 # LEVEL_02 # A streaming multipart parser for Python
 #
@@ -1140,7 +1142,7 @@ slycot==0.4.0.0 # LEVEL_02 # Slycot: a wrapper for the SLICOT control and system
 control==0.9.1 # LEVEL_04 # Python Control Systems Library
 cramjam==2.5.0 # LEVEL_01 # Thin Python bindings to de/compression algorithms in Rust
 DateTime==4.4 # LEVEL_03 # This package provides a DateTime data type, as known from Zope. Unless you need to communicate with Zope APIs, you're probably better off using Python's built-in datetime module
-fastparquet==0.8.0 # LEVEL_04 # Python support for Parquet file format
+fastparquet==0.8.1 # LEVEL_04 # Python support for Parquet file format
 filterpy==1.4.5 # LEVEL_04 # Kalman filtering and optimal estimation library
 PuLP==2.6.0 # LEVEL_01 # PuLP is an LP modeler written in python. PuLP can generate MPS or LP files and call GLPK, COIN CLP/CBC, CPLEX, and GUROBI to solve linear problems
 #
@@ -1174,8 +1176,6 @@ pandocfilters==1.5.0 # LEVEL_01 # Utilities for writing pandoc filters in python
 plumbum==1.7.2 # LEVEL_01 # Plumbum: shell combinators library
 #
 tinydb==4.7.0 # LEVEL_01 # TinyDB is a tiny, document oriented database optimized for your happiness :)
-#
-responses==0.18.0 # LEVEL_03 # A utility library for mocking out the `requests` Python library
 #
 # recommenders from Microsoft
 #
