--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -52,6 +52,8 @@ Box2D==2.3.2 # LEVEL_01 # LOCKED # ONLY_OSX # more recent versions, like 2.3.10 
 kaleido==0.2.1 # LEVEL_01 # LOCKED # .post1 does not work # Static image export for web-based visualization libraries with zero dependencies
 #
 stable-baselines3==1.2.0 # LEVEL_04 # LOCKED # version 1.3.0 depends on gym<0.20 :-( # Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms
+mlagents-envs==0.28.0 # LEVEL_03 # LOCKED # Unity Machine Learning Agents Interface
+PettingZoo==1.12.0 # LEVEL_03 # LOCKED # Gym for multi-agent reinforcement learning
 #
 optional-django==0.1.0 # LEVEL_01 # LOCKED # nodejs 0.1.1 requires optional-django==0.1.0 # Utils for apps to provide optional support for django applications
 #
@@ -263,7 +265,6 @@ h2o==3.36.0.4 # LEVEL_03 # H2O, Fast Scalable Machine Learning, for python
 #
 gym-unity==0.28.0 # LEVEL_04 # Unity Machine Learning Agents Gym Interface
 gym-notices==0.0.6 # LEVEL_01 # Notices for gym
-mlagents-envs==0.28.0 # LEVEL_03 # Unity Machine Learning Agents Interface
 #
 gensim==4.1.2 # LEVEL_03 # Python framework for fast Vector Space Modelling
 #
@@ -528,9 +529,9 @@ smart-open==5.2.1 # LEVEL_01 # Utils for streaming large files (S3, HDFS, GCS, A
 uamqp==1.5.3 # LEVEL_02 # AMQP 1.0 Client Library for Python
 
 # Amazon
-boto3==1.21.33  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+boto3==1.21.34  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
 s3transfer==0.5.2 # LEVEL_04 # An Amazon S3 Transfer Manager
-botocore==1.24.33 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+botocore==1.24.34 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 boto==2.49.0 # LEVEL_01 # Amazon Web Services Library
 
 #
