--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -597,6 +597,7 @@ json5==0.9.6 # LEVEL_01 # A Python implementation of the JSON5 data format
 simplejson==3.17.6 # LEVEL_01 # Simple, fast, extensible JSON encoder/decoder for Python
 ujson==5.1.0 # LEVEL_01 # Ultra fast JSON encoder and decoder for Python
 PyJWT==2.3.0 # LEVEL_01 # JSON Web Token implementation in Python
+fastjsonschema==2.15.3 # LEVEL_01 # Fastest Python implementation of JSON schema
 #
 # RPC
 #
@@ -1188,3 +1189,6 @@ scikit-surprise==1.1.1 # LEVEL_03 # An easy-to-use library for recommender syste
 Bottleneck==1.3.4 # LEVEL_02 # Fast NumPy array functions written in C
 hypothesis==6.41.0 # LEVEL_02 # A library for property-based testing
 mpmath==1.2.1 # LEVEL_01 # Python library for arbitrary-precision floating-point arithmetic
+#
+snapml==1.9.0 # LEVEL_04 # Snap Machine Learning
+exceptiongroup==1.0.0rc2 # LEVEL_01 # Backport of PEP 654 (exception groups)
